Changes Added for GSAP

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+@theme {
+  --font-auth: "ThinkLoved", sans-serif;
+}
+
+@font-face {
+  font-family: ThinkLoved;
+  src: url("./font/ThinkLoved.woff2") format("woff2");
+}
