--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Anton&family=Rubik:ital,wght@0,300..900;1,300..900&family=Sofia+Sans+Condensed:ital,wght@0,1..1000;1,1..1000&family=VT323&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Sofia+Sans+Condensed:ital,wght@0,1..1000;1,1..1000&family=VT323&display=swap");
 @import "tailwindcss";
 @plugin "daisyui" {
-  themes: black;
+  themes: black, lemonade;
 }
 
 @theme {
@@ -10,6 +10,8 @@
   --font-anton: "Anton", sans-serif;
   --font-sofia: "Sofia Sans Condensed", sans-serif;
   --font-vt: "VT323", monospace;
+  --font-ma: "Montserrat Alternates", sans-serif;
+  --font-m: "Montserrat", sans-serif;
 }
 
 @font-face {
