--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -1,20 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Sofia+Sans+Condensed:ital,wght@0,1..1000;1,1..1000&family=VT323&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fascinate+Inline&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
 @import "tailwindcss";
 @plugin "daisyui" {
   themes: black, lemonade;
 }
 
 @theme {
-  --font-auth: "ThinkLoved", sans-serif;
-  --font-rubik: "Rubik", sans-serif;
-  --font-anton: "Anton", sans-serif;
-  --font-sofia: "Sofia Sans Condensed", sans-serif;
-  --font-vt: "VT323", monospace;
-  --font-ma: "Montserrat Alternates", sans-serif;
-  --font-m: "Montserrat", sans-serif;
-}
-
-@font-face {
-  font-family: ThinkLoved;
-  src: url("./font/ThinkLoved.woff2") format("woff2");
+  --font-logo: "Fascinate Inline", sans-serif;
+  --font-heading: "Montserrat", sans-serif;
+  --font-subheading: "Roboto Mono", monospace;
 }
